fonts, modes, colors

--- a/index.html
+++ b/index.html
@@ -1,134 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
-<style>
-/* @import url(comfortaa.css); */
-/* @import url(nunito.css); */
-/* @import url(quicksand.css); */
-
-.blue_back {
-    background-color:rgb(0, 130, 202);
-}
-.blue {
-    color:rgb(0, 130, 202);
-}
-.green {
-    color:rgb(0, 202, 130);
-}
-.green_back {
-    background-color:rgb(0, 202, 130);
-}
-.dark {
-    color:rgb(54, 54, 54);
-}
-.dark_grey {
-    color:rgb(74, 74, 74);
-}
-.hr {
-    background-color:rgb(0, 130, 202);
-    border-bottom-color:rgb(74, 74, 74);
-    border-bottom-style:none;
-    border-bottom-width:0px;
-    border-image-outset:0px;
-    border-image-repeat:stretch;
-    border-image-slice:100%;
-    border-image-source:none;
-    border-image-width:1;
-    border-left-color:rgb(74, 74, 74);
-    border-left-style:none;
-    border-left-width:0px;
-    border-right-color:rgb(74, 74, 74);
-    border-right-style:none;
-    border-right-width:0px;
-    border-top-color:rgb(74, 74, 74);
-    border-top-style:none;
-    border-top-width:0px;
-    box-sizing:border-box;
-    color:rgb(74, 74, 74);
-    display:block;
-    font-family:Nunito, BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size:16px;
-    font-weight:400;
-    height:5px;
-    line-height:24px;
-    margin-block-end:24px;
-    margin-block-start:24px;
-    margin-bottom:24px;
-    margin-inline-end:0px;
-    margin-inline-start:0px;
-    margin-left:0px;
-    margin-right:0px;
-    margin-top:24px;
-    overflow-x:hidden;
-    overflow-y:hidden;
-    padding-bottom:0px;
-    padding-left:0px;
-    padding-right:0px;
-    padding-top:0px;
-    text-rendering:optimizelegibility;
-    text-size-adjust:100%;
-    unicode-bidi:isolate;
-    width:96px;
-    -webkit-font-smoothing:antialiased
-}
-
-
-.t1 {
-color:rgb(54, 54, 54);
-display:block;
-font-family:Comfortaa,Nunito,Quicksand;
-font-size:48px;
-font-weight:700;
-text-rendering:optimizelegibility;
-text-size-adjust:100%;
-word-break:break-word;
--webkit-font-smoothing:antialiased;
-    }
-
-    .t2 {
-display:block;
-color:rgb(74, 74, 74);
-font-family:Comfortaa,Nunito,Quicksand;
-font-size:40px;
-font-weight:300;
-text-rendering:optimizelegibility;
-text-size-adjust:100%;
-word-break:break-word;
--webkit-font-smoothing:antialiased;
-    }
-
-    .t3 {
-color:rgb(54, 54, 54);
-display:block;
-font-family:Comfortaa,Nunito,Quicksand;
-font-size:30px;
-font-weight:700;
-text-rendering:optimizelegibility;
-text-size-adjust:100%;
-word-break:break-word;
--webkit-font-smoothing:antialiased;
-    }
-
-    .t4 {
-color:rgb(74, 74, 74);
-display:block;
-font-family:Comfortaa,Nunito,Quicksand;
-font-size:24px;
-font-weight:400;
-text-rendering:optimizelegibility;
-text-size-adjust:100%;
--webkit-font-smoothing:antialiased;
-    }
-
-</style>
+    <!-- fonts -->
+    <link rel="stylesheet" type="text/css" href="comfortaa.css" />
+    <link rel="stylesheet" type="text/css" href="nunito.css" />
+    <link rel="stylesheet" type="text/css" href="quicksand.css" />
+    <link rel="stylesheet" type="text/css" href="proxima-nova.css" />
+    <link rel="stylesheet" type="text/css" href="fa-regular.css" />
+    <link rel="stylesheet" type="text/css" href="fa-solid.css" />
+    <link rel="stylesheet" type="text/css" href="fa-brands.css" />
+    <!-- colors -->
+    <link rel="stylesheet" type="text/css" href="palette.css" />
+    <link rel="stylesheet" type="text/css" href="dark.css" />
+    <link rel="stylesheet" type="text/css" href="light.css" />
+    <!-- elements -->
+    <link rel="stylesheet" type="text/css" href="elements.css" />
+    <script src="script.js" type="text/javascript" charset="utf-8"></script>
+    <title></title>
 </head>
 <body>
+    <span class="fa" onclick="display_mode_switch()">&#xf042;</span>
 	<span class="t1">The Update Framework</span>
-    <hr class="hr">
+    <hr class="bg-tint1">
     <span class="t2">A framework for securing software update systems</span>
-
+    <hr class="bg-tint2">
     <span class="t3">Purpose, or Why Get TUF?</span>
 	<span class="t4">TUF is hosted by the Linux Foundation as part of the Cloud Native Computing Foundation (CNCF) and is used in production by companies such </span>
+    <hr class="bg-tint3">
+	<span class="t5">Requests Leaderboard</span>
 </body>
 </html>
