--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html>
 <head>
     <!-- fonts -->
-    <link rel="stylesheet" type="text/css" href="comfortaa.css" />
-    <link rel="stylesheet" type="text/css" href="nunito.css" />
-    <link rel="stylesheet" type="text/css" href="quicksand.css" />
-    <link rel="stylesheet" type="text/css" href="proxima-nova.css" />
-    <link rel="stylesheet" type="text/css" href="fa-regular.css" />
-    <link rel="stylesheet" type="text/css" href="fa-solid.css" />
-    <link rel="stylesheet" type="text/css" href="fa-brands.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_comfortaa.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_nunito.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_quicksand.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_proxima-nova.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_fa-regular.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_fa-solid.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font_fa-brands.css" />
     <!-- colors -->
-    <link rel="stylesheet" type="text/css" href="palette.css" />
-    <link rel="stylesheet" type="text/css" href="dark.css" />
-    <link rel="stylesheet" type="text/css" href="light.css" />
+    <link rel="stylesheet" type="text/css" href="./css/colors_palette.css" />
     <!-- elements -->
-    <link rel="stylesheet" type="text/css" href="elements.css" />
-    <script src="script.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="./css/html_elements.css" />
+    <link rel="stylesheet" type="text/css" href="./css/classes.css" />
+
+    <script src="./js/display_mode.js" type="text/javascript" charset="utf-8"></script>
     <title></title>
 </head>
 <body>
-    <span class="fa" onclick="display_mode_switch()">&#xf042;</span>
+    <span class="fa over icon-medium" onclick="display_mode_switch()">&#xf042;</span>
 	<span class="t1">The Update Framework</span>
     <hr class="bg-tint1">
     <span class="t2">A framework for securing software update systems</span>
