--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <!-- fonts -->
-    <link rel="stylesheet" type="text/css" href="./css/palette_fonts.css" />
+    <link rel="stylesheet" type="text/css" href="./css/root_vars_fonts.css" />
     <!-- colors -->
-    <link rel="stylesheet" type="text/css" href="./css/palette_colors.css" />
+    <link rel="stylesheet" type="text/css" href="./css/root_vars_colors.css" />
     <!-- layout -->
-    <link rel="stylesheet" type="text/css" href="./css/palette_layout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/root_vars_layout.css" />
     <!-- elements -->
     <link rel="stylesheet" type="text/css" href="./css/elements_html.css" />
     <link rel="stylesheet" type="text/css" href="./css/elements_classes.css" />
