--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- colors -->
     <link rel="stylesheet" type="text/css" href="./css/root_vars_colors.css" />
     <!-- layout -->
-    <link rel="stylesheet" type="text/css" href="./css/root_vars_layout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/root_vars_layouts.css" />
     <!-- elements -->
     <link rel="stylesheet" type="text/css" href="./css/elements_html.css" />
     <link rel="stylesheet" type="text/css" href="./css/elements_classes.css" />
